fix: temporarily removed light/dark mode (#32)

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -8,23 +8,6 @@
   transition: all 0.3s;
 }
 
-.card::before {
-  content: '';
-  position: absolute;
-  inset: -16px;
-  background: linear-gradient(to right, rgb(79, 70, 229), rgb(37, 99, 235));
-  border-radius: 16px;
-  filter: blur(16px);
-  opacity: 0;
-  transition: opacity 1s;
-  z-index: -1;
-}
-
-.card:hover::before {
-  opacity: 0.2;
-  transition-duration: 0.2s;
-}
-
 .link {
   position: relative;
   transition: all 0.3s;
